--- a/docs/assets/css/styles.css
+++ b/docs/assets/css/styles.css
@@ -83,6 +83,7 @@ h5 {
 .advertenciaDelete {
   display: none;
 }
+
 .backgrundAviso {
   width: 100%;
   height: 100%;
@@ -92,12 +93,18 @@ h5 {
   align-items: center;
   padding: 50px;
   background: rgba(0, 3, 34, 0.76);
+  perspective: 1000px;
 }
 .ContentAvisoDelete {
   width: 400px;
   background: white;
   border-radius: 8px;
   position: relative;
+  border-bottom: 6px solid #ccc;
+  border-right: 4px solid #bbb;
+
+  transform-style: preserve-3d;
+  box-shadow: 20px 20px 40px rgba(0, 0, 0, 0.3);
 }
 .backgrundAviso.show {
   animation: intro2 0.4s ease-in-out forwards;
@@ -108,11 +115,11 @@ h5 {
 }
 
 .ContentAvisoDelete.show {
-  animation: fadeIn 0.4s ease-in-out forwards;
+  animation: enter3D 0.4s ease-in-out forwards;
 }
 
 .ContentAvisoDelete.hide {
-  animation: fadeIn 0.4s ease-in-out reverse forwards;
+  animation: enter3D 0.4s ease-in-out reverse forwards;
 }
 
 .headerMainAviso {
@@ -1053,6 +1060,26 @@ h5 {
 .alta:hover {
   scale: 0.98;
 }
+.options-prioridad.active-baja {
+  background: linear-gradient(40deg, #04cf60, #03b65c);
+  border: 2px solid #03d16a;
+  border-bottom: 4px solid #039e50;
+  color: #fff;
+}
+
+.options-prioridad.active-media {
+  background: linear-gradient(40deg, #02ebdf, #0145ff);
+  border: 2px solid #01e1ff;
+  border-bottom: 4px solid #00cbe6;
+  color: #fff;
+}
+
+.options-prioridad.active-alta {
+  background: linear-gradient(40deg, #ff6565, #ff0162);
+  border: 2px solid #ff6565;
+  border-bottom: 4px solid #ff0162;
+  color: #fff;
+}
 
 .agregar2 {
   padding: 10px;
@@ -1128,7 +1155,7 @@ h5 {
   overflow: hidden;
   animation: themeAnimation 0.16s ease-in-out;
 }
-#repet {
+.repet {
   padding: 8px 8px;
   color: #474747;
   font-size: 15px;
@@ -1138,13 +1165,13 @@ h5 {
   gap: 8px;
   cursor: pointer;
 }
-#repet i {
+.repet i {
   font-size: 16px;
 }
-#repet p {
+.repet p {
   margin: 0;
 }
-#repet:hover {
+.repet:hover {
   background: rgba(220, 220, 220, 0.788);
 }
 .repeticion_tasks {
@@ -1163,8 +1190,8 @@ h5 {
 
 .Guadar-btn {
   padding: 12px 10px;
-  border-radius: 8px;
-  border: 2px solid #00c3ff;
+  border-radius: 12px;
+  border: 2px solid #01a0ac;
   border-bottom: 6px solid #006a8a;
   background: #a7f0fa;
   color: #006a8a;
@@ -1415,7 +1442,7 @@ h5 {
 }
 .header-editar {
   display: grid;
-  grid-template-columns: 99% auto;
+  grid-template-columns: 98% auto;
   top: 0;
   left: 0;
   padding: 10px 30px 0px 18px;
@@ -1434,11 +1461,18 @@ h5 {
   display: inline-block;
   transition: transform 0.5s ease;
   transform-origin: center;
+  padding: 0 6px;
+  display: flex;
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
 }
 
 .Closeeditar:hover {
   transform: rotateY(180deg);
   color: rgb(0, 26, 255);
+  background: #dae0ff;
+  border-radius: 50%;
 }
 
 .contenido-editar {
@@ -1569,7 +1603,31 @@ h5 {
 }
 .ProridadEditar button:hover {
   scale: 0.98;
-  background: #e3f2f7;
+}
+
+.btnProridadEdit {
+  transition: all 0.3s ease;
+}
+
+.btnProridadEdit.baja {
+  background: linear-gradient(40deg, #04cf60, #03b65c);
+  border: 2px solid #03d16a;
+  border-bottom: 4px solid #039e50;
+  color: #fff;
+}
+
+.btnProridadEdit.media {
+  background: linear-gradient(40deg, #02ebdf, #0145ff);
+  border: 2px solid #01e1ff;
+  border-bottom: 4px solid #00cbe6;
+  color: #fff;
+}
+
+.btnProridadEdit.alta {
+  background: linear-gradient(40deg, #ff6565, #ff0162);
+  border: 2px solid #ff6565;
+  border-bottom: 4px solid #ff0162;
+  color: #fff;
 }
 
 .descripcionEditar {
@@ -1673,6 +1731,19 @@ h5 {
   }
   to {
     opacity: 1;
+  }
+}
+
+@keyframes enter3D {
+  from {
+    opacity: 0;
+    scale: 0.94;
+    transform: rotateX("-30deg") translateZ(-200px);
+  }
+  to {
+    opacity: 1;
+    scale: 1;
+    transform: rotateX("0deg") translateZ(0);
   }
 }
 
