--- a/docs/assets/css/styles.css
+++ b/docs/assets/css/styles.css
@@ -1236,7 +1236,7 @@ h5 {
   opacity: 0;
 }
 .List_check h4 {
-  font-weight: normal;
+  font-weight: bold;
 }
 .task-item {
   display: grid;
@@ -1323,7 +1323,7 @@ h5 {
   justify-items: center;
   text-align: center;
   border-radius: 8px;
-  border: 2px dashed rgb(255, 0, 140);
+  border: 2px dashed rgb(0, 140, 255);
   background-color: #8cc7d41e;
   position: relative;
   overflow: hidden;
@@ -1339,21 +1339,15 @@ h5 {
   justify-items: center;
   text-align: center;
   border-radius: 8px;
-  border: 2px dashed rgb(255, 0, 140);
+  border: 2px dashed rgb(0, 140, 255);
   background-color: #8cc7d41e;
 }
 .viso_caja_vacia p {
-  transform: translateY(-68px);
+  transform: translateY(-30px);
 }
-.caja {
-  width: 90px;
-  height: 90px;
-  background: linear-gradient(60deg, #ff8a00, #e52e71);
-  cursor: pointer;
-  padding: 6px;
-  margin-top: 90px;
-  border-radius: 50%;
-  text-align: center;
+.caja svg {
+  width: 300px;
+  height: 300px;
 }
 .caja i {
   font-size: 30px;
@@ -2101,6 +2095,10 @@ h5 {
   }
   .viso_boxVacia {
     grid-column: 1 / span 3;
+  }
+  .caja svg {
+    width: 260px;
+    height: 260px;
   }
   .viso_caja_vacia {
     grid-column: 1 / span 3;
