--- a/docs/assets/css/styles.css
+++ b/docs/assets/css/styles.css
@@ -686,7 +686,7 @@ h5 {
 
 .subir_tarea {
   position: fixed;
-  z-index: 32;
+  z-index: 50;
   inset: 0;
   background: white;
 
@@ -1434,7 +1434,7 @@ h5 {
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 28;
+  z-index: 50;
 }
 .backgrauEditar {
   background: rgba(0, 0, 0, 0.568);
@@ -2150,7 +2150,7 @@ h5 {
     background: white;
     border-top: 3px solid gainsboro;
     box-shadow: 0 0 0 gainsboro;
-    z-index: 100;
+    z-index: 38;
     position: fixed;
     bottom: 0;
     height: 66px;
@@ -2346,7 +2346,7 @@ h5 {
     overflow-y: auto;
     border: 0px solid gainsboro;
     border-radius: 0px;
-    padding: 10px 20px 20px 20px;
+    padding: 15px;
     padding-bottom: 30px;
   }
   .contenedor_categoria {
