--- a/docs/assets/css/style2.css
+++ b/docs/assets/css/style2.css
@@ -81,9 +81,9 @@
   border-left: 2px solid gainsboro;
   margin: 5px 0;
 
-  opacity: 0;
-  pointer-events: none;
-  transform: translateY(5%);
+  opacity: 1;
+  /*pointer-events: none;
+  transform: translateY(5%);*/
   transition: opacity 0.3s ease, transform 0.3s ease;
 }
 .openPerfil {
@@ -160,7 +160,137 @@
   background-position: center;
   border: 4px solid rgb(177, 177, 247);
 }
+.descripcionUser {
+  padding-bottom: 20px;
+}
+.resumen_personal {
+  margin-top: 10px;
+}
 
+.contentResumenPerfilApp {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+  padding-left: 2px;
+}
+.cajaResumen {
+  margin-top: 10px;
+  height: 140px;
+  border-radius: 12px;
+  box-shadow: 0 0 5px gainsboro;
+  padding: 8px;
+  padding-bottom: 18px;
+  position: relative;
+  overflow: hidden;
+  justify-content: center;
+}
+
+.racha {
+  box-shadow: 0 0 4px rgb(253, 201, 132);
+  margin-top: 10px;
+  height: 140px;
+  border-radius: 12px;
+  padding: 8px;
+  padding-bottom: 18px;
+  position: relative;
+  overflow: hidden;
+  justify-content: center;
+}
+.headerRacha {
+  display: flex;
+  gap: 10px;
+  margin-bottom: 10px;
+}
+.racha p {
+  color: #6e6e6e;
+  font-size: 14px;
+}
+.contenBtnRacha {
+  bottom: 10px;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+}
+.ProgresoRacha {
+  border-radius: 12px;
+  background: rgb(253, 212, 165);
+  color: #000;
+  padding: 10px 8px;
+  text-align: center;
+  width: 190px;
+}
+.headerTareasComplet {
+  display: grid;
+  grid-template-columns: auto auto;
+  gap: 10px;
+  margin-bottom: 10px;
+}
+.headerTareasComplet i {
+  margin: 0 0 0 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  padding: 6px;
+  border-radius: 50%;
+  height: 38px;
+  width: 38px;
+  background: #01b5ec5b;
+  color: #004458;
+  border-bottom: 3px solid #006a8a;
+  border-right: 2px solid #006a8a;
+}
+.contenCompleteTas {
+  bottom: 10px;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+}
+.CantidadBtnComplet {
+  padding: 10px 8px;
+  text-align: center;
+  width: 190px;
+  border-radius: 12px;
+  background: #f1f1f1;
+}
+.headerProgreso {
+  display: grid;
+  grid-template-columns: auto auto;
+  gap: 10px;
+  margin-bottom: 10px;
+}
+.headerProgreso i {
+  margin: 0 0 0 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  padding: 6px;
+  border-radius: 50%;
+  height: 38px;
+  width: 38px;
+  background: #01ec6b5b;
+  color: #30c702;
+  border-bottom: 3px solid #00e244;
+  border-right: 2px solid #00e244;
+}
+.headerProgreso p {
+  color: #6e6e6e;
+  font-size: 14px;
+}
+.ProgresoBtnSemal {
+  bottom: 10px;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+}
+.Productividad {
+  padding: 10px 8px;
+  text-align: center;
+  width: 190px;
+  border-radius: 12px;
+  background: #f1f1f1;
+}
 /*Seccion 2*/
 .info_Secundaria {
   border-radius: 10px;
@@ -235,39 +365,23 @@
   margin-top: 10px;
   padding: 15px 10px;
   border-radius: 12px;
-  background: rgb(217, 238, 255);
+  border: 2px solid rgb(0, 162, 255);
 }
 .listaProyectosGrupales {
   list-style: none;
   margin: 0;
 }
 .listaProyectosGrupales li {
-  padding: 10px;
   border-radius: 10px;
   display: flex;
   align-items: center;
   gap: 8px;
-  margin-bottom: 20px;
-  border: 2px solid rgb(0, 140, 255);
-  box-shadow: 0 0 50px rgb(198, 198, 255);
+  margin-bottom: 6px;
 }
 .Item_proyectPerfil {
   background: rgb(255, 255, 255);
 }
-.Item_proyectPerfil i {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 20px;
-  padding: 6px;
-  border-radius: 50%;
-  height: 38px;
-  width: 38px;
-  background: #01b5ec;
-  color: #004458;
-  border-bottom: 3px solid #006a8a;
-  border-right: 2px solid #006a8a;
-}
+
 .btnAgregarProyect {
   display: flex;
   justify-content: center;
@@ -295,9 +409,25 @@
   font-size: 20px;
   cursor: pointer;
 }
-
+.headerProyectosResu i {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  padding: 6px;
+  border-radius: 50%;
+  height: 38px;
+  width: 38px;
+  background: #01b5ec;
+  color: #004458;
+  border-bottom: 3px solid #006a8a;
+  border-right: 2px solid #006a8a;
+}
 .headerProyectosResu {
   margin-bottom: 10px;
+  display: flex;
+  gap: 10px;
+  align-items: center;
 }
 /* Animaciones */
 @keyframes popUp {
@@ -337,14 +467,117 @@
   .loyoutPerfile {
     grid-template-columns: auto;
     gap: 40px;
-    padding-bottom: 80px;
   }
   .headerPerfil {
     border-radius: 14px;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
+    height: 140px;
+  }
+  .iconoAjustesheader {
+    width: 30px;
+    height: 30px;
+    background: #ffffff;
+    border-radius: 8px;
+    border: 2px solid rgb(255, 255, 255);
+    border-top: 4px solid rgb(255, 255, 255);
+    border-bottom: 4px solid rgb(255, 255, 255);
+  }
+  .iconoAjustesheader i {
+    font-size: 17px;
+    color: #5a5a5ac2;
+  }
+  .fotoPerfil img {
+    height: 110px;
+    width: 110px;
+    border: 2px solid rgb(177, 177, 247);
+  }
+  .nameUserDescrip h2 {
+    font-size: 20px;
+  }
+  .nameUserDescrip,
+  .descripcionUser {
+    text-align: center;
+  }
+  .descripcionUser p {
+    font-size: 14px;
   }
 
+  /*==================*/
+  .contentResumenPerfilApp {
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    gap: 10px;
+    padding-left: 2px;
+    color: #575757;
+  }
+  .resumen_personal h3,
+  .headerProyectosResu h4,
+  .headerMsg h4 {
+    font-size: 15px;
+    color: #575757;
+  }
+  .cajaResumen,
+  .racha {
+    margin-top: 10px;
+    height: 120px;
+  }
+  .headerRacha img {
+    height: 24px;
+    width: 24px;
+  }
+
+  .headerTareasComplet i {
+    margin: 0 0 0 3px;
+    font-size: 15px;
+    height: 28px;
+    width: 28px;
+  }
+  .headerProgreso i {
+    margin: 0 0 0 3px;
+    font-size: 15px;
+    height: 28px;
+    width: 28px;
+  }
+  .headerProgreso {
+    display: grid;
+    grid-template-columns: 13% auto;
+  }
+  .progresoSemanal {
+    height: 60px;
+    display: grid;
+    grid-template-columns: 69% 30%;
+    justify-content: right;
+  }
+  .ProgresoBtnSemal {
+    position: relative;
+    padding: 10px;
+    align-items: center;
+    display: flex;
+    height: 100%;
+  }
+  .Productividad {
+    width: 116px;
+    height: 30px;
+    font-size: 13px;
+    padding: 5px;
+    border-radius: 8px;
+    margin-top: 8px;
+  }
+
+  .ProgresoRacha,
+  .CantidadBtnComplet {
+    width: 160px;
+    font-size: 13px;
+    padding: 5px;
+    border-radius: 8px;
+  }
+  .tittleCaja {
+    font-size: 14px;
+  }
+  .progresoSemanal {
+    grid-column: 1 / span 2;
+  }
   .HeaderSecond {
     position: relative;
     display: flex;
@@ -352,11 +585,7 @@
     gap: 40px;
   }
 
-  .fotoPerfil img {
-    height: 140px;
-    width: 140px;
-  }
   .contenidoSecundario {
-    padding: 0 10px;
+    padding: 0 14px;
   }
 }
