--- a/docs/assets/css/style2.css
+++ b/docs/assets/css/style2.css
@@ -81,9 +81,9 @@
   border-left: 2px solid gainsboro;
   margin: 5px 0;
 
-  opacity: 1;
-  /*pointer-events: none;
-  transform: translateY(5%);*/
+  opacity: 0;
+  pointer-events: none;
+  transform: translateY(5%);
   transition: opacity 0.3s ease, transform 0.3s ease;
 }
 .openPerfil {
