--- a/docs/assets/css/style2.css
+++ b/docs/assets/css/style2.css
@@ -80,10 +80,10 @@
   background: white;
   border-left: 2px solid gainsboro;
   margin: 5px 0;
-
+  /*
   opacity: 0;
   pointer-events: none;
-  transform: translateY(5%);
+  transform: translateY(5%);*/
   transition: opacity 0.3s ease, transform 0.3s ease;
 }
 .openPerfil {
@@ -99,7 +99,7 @@
   display: grid;
   grid-template-columns: 50% 30%;
   gap: 40px;
-  height: 100%;
+  height: 98vh;
   overflow-y: auto;
 }
 
@@ -404,24 +404,34 @@
 .btnAgregarProyect button:hover {
   scale: 0.96;
 }
-.btnAgregarProyect i {
-  padding-right: 10px;
-  font-size: 20px;
-  cursor: pointer;
-}
-.headerProyectosResu i {
+
+.IconProyectPerfile {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 20px;
   padding: 6px;
   border-radius: 50%;
-  height: 38px;
-  width: 38px;
+  height: 39px;
+  width: 39px;
   background: #01b5ec;
   color: #004458;
   border-bottom: 3px solid #006a8a;
   border-right: 2px solid #006a8a;
+}
+.iconProyec {
+  position: absolute;
+  z-index: 10;
+  font-size: 19px;
+  margin-right: 6px;
+}
+.icon-second {
+  position: absolute;
+  z-index: 1;
+  color: #b2eeeb;
+  margin-left: 14px;
+  font-size: 16px;
 }
 .headerProyectosResu {
   margin-bottom: 10px;
@@ -429,6 +439,38 @@
   gap: 10px;
   align-items: center;
 }
+/*Ajustes Acceso Rapido*/
+.ajustesAccesoRapido {
+  border-radius: 12px;
+  height: 190px;
+  box-shadow: 0 0 5px gainsboro;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  padding: 8px;
+}
+.lineDivSoriaGears {
+  height: 1px;
+  background: rgb(236, 236, 236);
+  margin: 10px 0;
+}
+.ajustesAcceso {
+  position: relative;
+  display: grid;
+  grid-template-columns: 12% auto 5%;
+  align-items: center;
+  cursor: pointer;
+  padding: 0px 6px;
+  gap: 10px;
+}
+.ajustesAcceso i {
+  padding: 10px 12px;
+  border-radius: 12px;
+  background: rgb(241, 245, 247);
+}
+.ajustesAcceso p {
+  font-family: "Poppins", sans-serif;
+}
+
 /* Animaciones */
 @keyframes popUp {
   0% {
@@ -467,6 +509,7 @@
   .loyoutPerfile {
     grid-template-columns: auto;
     gap: 40px;
+    height: 100%;
   }
   .headerPerfil {
     border-radius: 14px;
@@ -584,8 +627,13 @@
     justify-content: space-around;
     gap: 40px;
   }
-
   .contenidoSecundario {
     padding: 0 14px;
+  }
+
+  /*Acesso Rapido*/
+  .ajustesAccesoRapido {
+    height: auto;
+    margin-bottom: 0;
   }
 }
