--- a/docs/assets/css/style2.css
+++ b/docs/assets/css/style2.css
@@ -80,10 +80,10 @@
   background: white;
   border-left: 2px solid gainsboro;
   margin: 5px 0;
-  /*
+
   opacity: 0;
   pointer-events: none;
-  transform: translateY(5%);*/
+  transform: translateY(5%);
   transition: opacity 0.3s ease, transform 0.3s ease;
 }
 .openPerfil {
